--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/gnitnuj/commoji/issues"
   },
-  "homepage": "https://github.com/gnitnuj/commoji#readme"
+  "homepage": "https://github.com/gnitnuj/commoji#readme",
+  "dependencies": {
+    "commander": "^2.9.0"
+  }
 }
