😱! emoji commits 💬 are 🔥 🔥 🔥. for i was 😎, but now i 👁 the 🔦.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "commander": "^2.9.0",
     "emojilib": "^2.2.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "simple-git": "^1.73.0"
   }
 }
