add some unit tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
     "extends": "airbnb-base",
     "plugins": [
-        "import"
-    ]
+        "import",
+        "jest"
+    ],
+    "env": {
+      "jest/globals": true
+    }
 }
