--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "^2.9.0",
     "emojilib": "^2.2.1",
     "lodash": "^4.17.4",
+    "moji-translate": "^1.0.7",
     "simple-git": "^1.73.0"
   },
   "devDependencies": {
