--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "commoji": "./commoji.js"
   },
   "scripts": {
-    "test": "jest"
+    "test": "no testing framework :("
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,6 @@
   "devDependencies": {
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.3.0",
-    "jest": "^20.0.4"
+    "eslint-plugin-import": "^2.3.0"
   }
 }
